[tool.poetry]
name = "playlistor"
version = "0.1.0"
description = "Simple Apple Music to Spotify playlist convertor."
authors = ["Raymond Akornor <raymondakornor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
celery-progress = {git = "https://github.com/akornor/celery-progress"}
spotipy = {git = "https://github.com/akornor/spotipy"}
amqp = "=2.3.2"
beautifulsoup4 = "=4.6.3"
billiard = "=3.5.0.4"
celery = "=4.2.1"
certifi = "=2018.11.29"
chardet = "=3.0.4"
Django = "=2.2.5"
idna = "=2.7"
kombu = "=4.2.1"
pytz = "=2018.7"
redis = "=2.10.6"
requests = "=2.20.1"
urllib3 = "=1.24.1"
vine = "=1.1.4"
gunicorn = "=19.9.0"
sentry-sdk = "=0.10.2"
django-heroku = "=0.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
