[tool.poetry]
name = "playlistor"
version = "0.1.0"
description = "Simple Apple Music to Spotify playlist convertor."
authors = ["Raymond Akornor <raymondakornor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
celery-progress = {git = "https://github.com/akornor/celery-progress"}
spotipy = {git = "https://github.com/akornor/spotipy"}
amqp = "=2.5.2"
beautifulsoup4 = "=4.6.3"
billiard = "=3.6.0"
celery = "=4.3.0"
certifi = "=2018.11.29"
chardet = "=3.0.4"
Django = "=2.2.8"
idna = "=2.7"
kombu = "=4.4.0"
pytz = "=2018.7"
redis = "=3.3.11"
requests = "=2.22.0"
urllib3 = "=1.24.1"
vine = "=1.3.0"
gunicorn = "=19.9.0"
sentry-sdk = "=0.13.2"
django-heroku = "=0.3.1"
PyJWT = "=1.7.1"
cryptography = "=2.8"
django-redis-cache = "=2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
